# sst-basic-blocks

./: CMakeLists.txt  README.md
.github/workflows/: build-tests.yml
doxygen/: Doxyfile
include/sst/basic-blocks/concepts/: concepts.h  envelope_modulator_rate.h  sample_rate.h  unit_conversions.h
include/sst/basic-blocks/dsp/: Ballistics.h  BlockInterpolators.h  Clippers.h  CorrelatedNoise.h  DCBlocker.h  DPWSawPulseOscillator.h  EllipticBlepOscillators.h  FastMath.h  FollowSlewAndSmooth.h  HilbertTransform.h  Interpolators.h  Lag.h  LagCollection.h  LanczosResampler.h  MidSide.h  OnePoles.h  OscillatorDriftUnisonCharacter.h  PanLaws.h  PinkNoise.h  QuadratureOscillators.h  RNG.h  SSESincDelayLine.h  SmoothingStrategies.h  SpecialFunctions.h  VUPeak.h  rng_gen.h
include/sst/basic-blocks/mechanics/: block-ops.h  endian-ops.h  simd-ops.h
include/sst/basic-blocks/mod-matrix/: ModMatrix.h  ModMatrixDetails.h
include/sst/basic-blocks/modulators/: ADAREnvelope.h  ADSRDAHDEnvelope.h  ADSREnvelope.h  AHDSRShapedSC.h  DAHDEnvelope.h  DAHDSREnvelope.h  DAREnvelope.h  DiscreteStagesEnvelope.h  FXModControl.h  SimpleLFO.h  StepLFO.h  Transport.h  TransportClapAdapter.h
include/sst/basic-blocks/params/: ParamMetadata.h
include/sst/basic-blocks/simd/: setup.h  wrap_simd_f32x4.h
include/sst/basic-blocks/tables/: DbToLinearProvider.h  EqualTuningProvider.h  ExpTimeProvider.h  MIDICCNames.h  SimpleSineProvider.h  SincTableProvider.h  SixSinesWaveProvider.h  TemposyncSupport.h  TwoToTheXProvider.h
libs/elliptic-blep/: LICENSE.txt  README.md  elliptic-blep.h
scripts/: fix_file_comments.pl  fix_header_comments.pl  fix_header_guards.pl  fix_simd.pl
tests/: block_tests.cpp  dsp_interpolators.cpp  dsp_tests.cpp  mod_matrix_tests.cpp  modulator_tests.cpp  param_tests.cpp  run_envelopes.cpp  simd_tests.cpp  smoke_test_sse.h  smoketest.cpp  table_tests.cpp  test_utils.h
tests/perf/: lfo.cpp  perf_test.cpp  perfutils.h
utils/: CMakeLists.txt  sweep-test.cpp
